@@ -1,6 +1,6 @@
 
-R version 2.10.0 Under development (unstable) (2009-08-04 r49064)
-Copyright (C) 2009 The R Foundation for Statistical Computing
+R version 2.13.0 Under development (unstable) (2011-01-30 r54155)
+Copyright (C) 2011 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -218,4 +218,9 @@ n= 30 : 465+0i -15+142.7155i -15+70.56945i -15+46.16525i -15+33.69055i -15+25.98
 > signif(8.678932-9.238276i, 5)
 [1] 8.6789-9.2383i
 > ## prior to 2.2.0 rounded real and imaginary parts separately.
+> 
+> ## 2.10.0-2.12.1 got z^n wrong in the !HAVE_C99_COMPLEX case
+> z <- 0.2853725+0.3927816i
+> stopifnot(all.equal(z^3, z*z*z))
+> ## was z^2
 > 
